Fix Card hover states getting stuck on mobile (#3190)

--- a/packages/core/src/link-card/LinkCard.css
+++ b/packages/core/src/link-card/LinkCard.css
@@ -74,17 +74,19 @@
   --linkCard-accent-color: var(--salt-selectable-foreground-hover);
 }
 
-/* Styles applied on hover state to LinkCard */
-.saltLinkCard:hover {
-  cursor: var(--salt-selectable-cursor-hover);
-  box-shadow: var(--salt-overlayable-shadow-hover);
-  --linkCard-accent-color: var(--salt-selectable-foreground-hover);
-}
-
 /* Styles applied on active state to LinkCard */
 .saltLinkCard:active {
   cursor: var(--salt-selectable-cursor-active);
   border-color: var(--salt-selectable-borderColor-selected);
   box-shadow: var(--salt-overlayable-shadow);
   --linkCard-accent-color: var(--salt-selectable-foreground-selected);
+}
+
+/* Styles applied on hover state to LinkCard */
+@media (hover: hover) {
+  .saltLinkCard:hover {
+    cursor: var(--salt-selectable-cursor-hover);
+    box-shadow: var(--salt-overlayable-shadow-hover);
+    --linkCard-accent-color: var(--salt-selectable-foreground-hover);
+  }
 }
